--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -35,15 +35,21 @@
     width: 100%;
     padding: 70px;
     text-align: center;
+    color: #fff;
 }
-.fondo1 h1, p{
-    color:#fff;
+.fondo1 h1{
+    font-weight: bold;
 }
 .fondo1 hr, #icono1{
     display: inline-block !important;
+}
+.fondo1 hr{
+    border: 2px solid #fff;
     width: 60px;
-    color: #fff;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
+}
+#icono1{
+    margin: 8px;
 }
 /* PORTAFOLIO */
 .fondo2{
@@ -59,5 +65,6 @@
 .fondo2 img{
     width: 100%;
     max-height: 300px;
-    vertical-align: middle;
+    margin-bottom: 30px;
 }
+
