--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -5,6 +5,8 @@
 .header, .header2, .header3{
     background: #2c3e50;
     width: 100%;
+    position: fixed;
+    z-index: 1;
 }
 .header h3, .header2 h3, .header3 h3{
     padding-bottom: 10px;
@@ -51,10 +53,18 @@
     width: 100%;
     text-align: center;
 }
-#superstar, #about, #contact, #about2, #contact2, #our, #contact3{
+#superstar,#about, #contact, #about2, #contact2,#our, #contact3{
     color: #fff;
     background: #18bc9c;
-    padding: 60px 0px 80px 0px;
+}
+#superstar, #about2{
+    padding: 175px 0px 80px 0px;
+}
+#our{
+    padding: 150px 0px 80px 0px;
+}
+#about, #contact, #contact2, #contact3{
+    padding: 80px 0px 80px 0px;
 }
 #portafolio{
     padding: 30px 0px;
